fix: disable pointer events on main-link and topic thumbnails when truncated

--- a/common/common.scss
+++ b/common/common.scss
@@ -381,6 +381,7 @@
     width: 100%;
     padding: 0;
     border: 0;
+    pointer-events: none;
   }
 
   .bulk-select,
@@ -866,6 +867,10 @@
       .topic-post-badges,
       .topic-excerpt {
         display: none !important;
+      }
+
+      .main-link {
+        pointer-events: none;
       }
     }
   }
